WIP Mod loading in preload from modpack dir.